# Hapsolutely

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  packages.html  pyproject.toml  requirements-live.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml  macos.yml  test.yml  windows.yml
examples/: ConvPhase_examplefile1.tsv  Convphase_examplefile1_HapViewformat_fasta.fas  Convphase_examplefile1_MolDformat_fasta.fas  Convphase_examplefile1_regular_fasta.fas  Convphase_examplefile2.tsv  Convphase_examplefile2_HapViewformat_fasta.fas  Convphase_examplefile2_MolDformat_fasta.fas  Convphase_examplefile2_regular_fasta.fas  Hapsolutely_examplefile3_regular_fasta.fas  Hapsolutely_examplefile3_regular_fasta_phased.fas  Hapsolutely_examplefile3_spartitions.spart  Hapsolutely_examplefile4_regular_fasta_long.fas  Hapsolutely_examplefile4_regular_fasta_short.fas  Hapsolutely_examplefile4_spartition.tsv  Hapsolutely_examplefile4_spartitions.spart  Hapsolutely_examplefile5_haploidseqs_regular_fasta.fas  Hapsolutely_examplefile5_spartition.tsv  malagasius.formated.fas  malagasius.phased.fas  phased.ab.spart  phased.ab.xml  phased.dot.fas  phased.external.plain.tree  phased.fas  phased.nj.distances.tree  phased.nj.plain.tree  phased.plain.fas  phased.spart  phased.tree  phased.tsv  phased.xml  sample.fas  sample.tsv
examples/cmos_mabuya/: cmos_mabuya.duplicated.fas.spart  cmos_mabuya.fas  cmos_mabuya.fas.spart  cmos_mabuya.phased.fas  cmos_mabuya_named.phased.txt
examples/malagasius/: malagasius.phased.fas
examples/simple/: phased.fas  phased.tsv  phased.xml  simple.tsv
scripts/: hapsolutely.py  hapsolutely.spec  taxophase.py  taxophase.spec
scripts/mac/: build.sh  bundle.spec  config.sh  sign.sh
tests/: conftest.py  test_main.py
tools/: config.sh  make-bundle.sh  make-disk-image.sh  make-executable.sh  notarize.sh  package.sh  run.py
tools/data/: hapsolutely.icns
tools/specs/: macos.spec  (+1 more)
(+92 files in other folders)
